crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__modify_only_group-2.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: residue_not_in_polymer
expression: out
---
  × failed to apply the modification 1,6-Anhydro (Anh) to residue 1 (N-
  │ Acetylmuramic Acid)
  ╰─▶   × residue 1 does not belong to the current polymer
        help: the referenced residue was likely created by a different
      Polymerizer
              instance
