crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__modify_only_group-4.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: nonexistent_modification
expression: out
---
  × the modification "Arg" could not be found in the supplied polymer database
