crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__modify_only_group.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: all_groups_occupied
expression: out
---
  × failed to apply the named modification 1,6-Anhydro (Anh) to residue 1 (N-
  │ Acetylmuramic Acid)
  ╰─▶   × no functional groups on residue 1 matching the target were free:
        │ "Hydroxyl" at="Reducing End" is modified
