crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__modify_only_groups-4.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: no_matching_groups
expression: out
---
  × failed to apply the modification 1,6-Anhydro (Anh) to residue 1 (N-
  │ Acetylmuramic Acid)
  ╰─▶   × too few functional groups on residue 1 matched the target "Hydroxyl"
        │ at="Reducing End" of="N-Acetylmuramic Acid" (1/2): "Hydroxyl"
      at="Reducing
        │ End"
